--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -6,24 +6,22 @@ body {
   margin: 0 auto;
   padding: 0 auto;
   font-family: 'Exo 2', sans-serif;
-}
-
-
-.jumbotron {
-  border: white 2px solid;
-  /* border-radius: 3rem; */
-  /* padding: 10px;
-  margin: 10px; */
-  text-align: center;
-}
-/* 
-.container {
   background-image: url("../image/tennis-ball.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
   height: auto;
   overflow: hidden;
+}
+
+
+/* .jumbotron {
+  border: white 2px solid;
+  /* border-radius: 3rem; */
+/* padding: 10px;
+  margin: 10px; */
+/* text-align: center;
 } */
+
 
 h1 {
   color: #abdbc1;
@@ -35,6 +33,8 @@ h1 {
 }
 
 button {
+  position: relative;
+  left: 40%;
   margin: 10px;
   padding: 10px;
   text-align: center;
