--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -9,8 +9,8 @@ body {
   background-image: url("../image/tennis-ball.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
-  height: auto;
-  overflow: hidden;
+  background-attachment: fixed;
+  background-position: center; 
 }
 
 
