--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -10,61 +10,43 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: center; 
+  background-position: center;
 }
-
-#triviaContainer {
-  position: relative;
-  height: 340px;
-  margin-top: 15px;
-  border: solid 2px white;
-  margin: 40px;
-}
-
-
-/* .slide {
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  z-index: 1;
-  opacity: 0;
-}
-
-.active-slide {
-  opacity: 1;
-  z-index: 1;
-} */
 
 h1 {
-  color: #abdbc1;
-  text-transform: uppercase;
-  text-align: center;
-  padding: 10px;
-  margin: 5px;
-  font-size: 75px;
-}
-
-button {
-  position: relative;
-  left: 40%;
-  margin: 10px;
-  padding: 10px;
+  font-size: 55px;
+  color: #ffffff;
   text-align: center;
 }
 
-.question, .answer {
-  font-size: 25px;
+#question {
+  font-size: 24px;
+  line-height: 34px;
+  text-align: center;
+  font-weight: bold;
   margin: 20px;
+  color: white;
 }
-
 
 #time-left {
   color: white;
-  font-size: 24px;
   text-align: center;
+  margin: 15px;
 }
 
-#submit {
+
+#answers {
+  font-size: 24px;
+  line-height: 34px;
+  text-align: center;
+  border: 2px solid white;
+  margin: 20px;
+  margin-top: 25px;
+}
+
+#start-button {
+  font-size: 33px;
+  text-align: center;
   position: relative;
-  bottom: 0;
+  left: 45%;
 }
