--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -44,9 +44,9 @@ h1 {
   margin-top: 25px;
 }
 
-#start-button {
+#start-button, #submit {
   font-size: 33px;
   text-align: center;
   position: relative;
-  left: 45%;
+  left: 40%;
 }
